Bug 123381 - FILEOPEN DOCX INT table formula is not working in LO
Summary: FILEOPEN DOCX INT table formula is not working in LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:26.2.0
Keywords:
: 137749 (view as bug list)
Depends on:
Blocks: DOCX-Fields Regressions-expression-is-faulty
  Show dependency treegraph
 
Reported: 2019-02-12 07:37 UTC by NISZ LibreOffice Team
Modified: 2025-06-13 13:42 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer. (280.16 KB, image/png)
2019-02-12 07:38 UTC, NISZ LibreOffice Team
Details
Document with INT table formulas. (20.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-02-12 07:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-02-12 07:37:57 UTC
Description:
INT table formula has Expression is faulty when opened in LO.

Steps to Reproduce:
    1. Create a new docx in Word.
    2. Insert a Table.
    3. Insert INT() formula to some of the cells.
    4. Save and open it in LO.

Actual Results:
The cells which had and INT formula now have ** Expression is faulty ** instead of what was in them in Word.

Expected Results:
All the cells should have the same data in them.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details: Version: 6.3.0.0.alpha0+
Build ID: 17dd2662ccfa9d04efbea74e5d7548db5b2126d4
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-02-12 07:38:42 UTC
Created attachment 149179 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 2 NISZ LibreOffice Team 2019-02-12 07:39:07 UTC
Created attachment 149180 [details]
Document with INT table formulas.
Comment 3 Xisco Faulí 2019-02-12 10:29:23 UTC
Formulas:

debug:7354:7354: =INT(5,21)
debug:7354:7354: =INT(C1)
Comment 4 Michael Warner 2020-07-12 23:36:12 UTC
(In reply to Xisco Faulí from comment #3)
> Formulas:
> 
> debug:7354:7354: =INT(5,21)

I'm not sure what is meant by this 2 argument example for INT. In Word, INT seems to only take one argument.
Comment 5 NISZ LibreOffice Team 2020-08-25 09:01:51 UTC
(In reply to Michael Warner from comment #4)
> (In reply to Xisco Faulí from comment #3)
> > Formulas:
> > 
> > debug:7354:7354: =INT(5,21)
> 
> I'm not sure what is meant by this 2 argument example for INT. In Word, INT
> seems to only take one argument.

That's 5.21 with a Hungarian decimal separator which is comma instead of English dot. So 5.21 rounded down to the nearest integer is 5.
Comment 6 Michael Warner 2020-08-25 21:37:11 UTC
Ah, I see. Thank you.
Comment 7 Xisco Faulí 2020-12-07 17:47:54 UTC
Still reproducible in

Version: 7.2.0.0.alpha0+
Build ID: 84af20ef3ea72190784e9e7be820684c2558ba8c
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 8 Xisco Faulí 2022-04-15 20:34:34 UTC
Proposed patch in https://gerrit.libreoffice.org/c/core/+/133091
Comment 9 Commit Notification 2022-04-22 12:45:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/27953931d4f6a8c69b98a90c63db81ebb27cdf63

tdf#123381: sw: add table formula INT

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2022-04-25 22:18:28 UTC
I guess we can close this issue as RESOLVED FIXED

@laszlo, Thanks for reviewing the patch
Comment 11 Gabor Kelemen (Collabora) 2022-04-26 09:14:07 UTC
*** Bug 137749 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2025-06-09 20:43:05 UTC
Pierre committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/4fdcb2d299636adfb9648800336882be96c30984

tdf#123381 : Int in table formula