tdf#123381: sw: add table formula INT

for DOCX interoperability.

Change-Id: I4e63e213ef0a6f3a775bdf3bedfb7aca8853b479